k8s/nginx-php-fpm-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: app
  name: web
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app

  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: php-fpm
        image: rafikarhaiem/php-app:v5
        imagePullPolicy: Always
        ports:
        - containerPort: 9000
          name: http
          protocol: TCP
        volumeMounts:
        - name: nginx-config-volume
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: default.conf
        - name: www-storage
          mountPath: /srv/app/:rw
      
      - name: nginx
        image: nginx:alpine
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        volumeMounts:
        - name: nginx-config-volume
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: default.conf
        - name: www-storage
          mountPath: /srv/app/:rw

      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: www-storage
        persistentVolumeClaim:
          claimName: pv-www-claim
      - name: nginx-config-volume
        configMap:
          name: nginx-config
