k8s/statefulset-redis.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    name: redis
  name: redis-st
  namespace: default
spec:
  podManagementPolicy: OrderedReady
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      name: redis
  serviceName: redis-svc
  template:
    metadata:
      labels:
        name: redis
      name: redis
      namespace: default
    spec:
      containers:
      - image: redis
        imagePullPolicy: Always
        name: container-redis
        ports:
        - containerPort: 6379
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /data
          name: redis-persistent-storage
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: redis-persistent-storage
        persistentVolumeClaim:
          claimName: redis-pv-claim
  updateStrategy:
    type: OnDelete
