k8s/service-mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: default
spec:
  ports:
  - port: 3306
    protocol: TCP
  selector:
    name: mysql
  clusterIP: None
