k8s/service-redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-svc
  namespace: default
spec:
  ports:
  - port: 6379
    protocol: TCP
  selector:
    name: redis
